--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,7 +1,7 @@
 <% content_for :title, "Sign Up | Rails Devise Template" %>
 
 <div class="max-w-md mx-auto">
-  <div class="card">
+  <div class="bg-white shadow-md rounded-lg p-6">
     <h2 class="text-xl font-bold mb-6 text-center">Create an Account</h2>
 
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
