--- a/app/views/admin/dashboard/index.html.erb
+++ b/app/views/admin/dashboard/index.html.erb
@@ -29,13 +29,13 @@
                 <td class="p-2"><%= user.created_at.strftime("%B %d, %Y") %></td>
                 <td class="p-2"><%= user.admin? ? "Yes" : "No" %></td>
                 <td class="p-2">
-                  <% if policy(user).show? %>
+                  <% if policy([:admin, user]).show? %>
                     <%= link_to "View", "#", class: "text-blue-600 hover:underline mr-2" %>
                   <% end %>
-                  <% if policy(user).edit? %>
+                  <% if policy([:admin, user]).edit? %>
                     <%= link_to "Edit", "#", class: "text-green-600 hover:underline mr-2" %>
                   <% end %>
-                  <% if policy(user).destroy? %>
+                  <% if policy([:admin, user]).destroy? %>
                     <%= link_to "Delete", "#", class: "text-red-600 hover:underline" %>
                   <% end %>
                 </td>
